Update UI on Mobile 2 Fixed 2

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -85,7 +85,7 @@ body {
         background: #0f0f0f;
         font-family: Roboto, Helvetica, Arial, sans-serif;
         color: #ffffff;
-        position: absolute;
+        position: relative;
     }
 
     body #header a.home {
@@ -97,7 +97,7 @@ body {
     }
 
     body .inputs {
-        position: absolute;
+        position: relative;
         top: 50%;
         left: 50%;
         text-align: center;
